# sage

./: .gitignore  LICENSE  NOTICE  README.md
.claude/: CLAUDE.md
.github/: CODEOWNERS
connectors/: README.md
connectors/_shared/: instructions.sh  sage-instructions.md  sage.md  scaffold.sh  security-policy.md
connectors/antigravity/: install.sh  uninstall.sh
connectors/claude/: install.sh  uninstall.sh
connectors/codex/: install.sh  uninstall.sh
connectors/copilot/: install.sh  uninstall.sh
connectors/cursor/: install.sh  uninstall.sh
connectors/kiro/: install.sh  uninstall.sh
connectors/vscode/: install.sh  uninstall.sh
docs/: value-proposition.md
docs/architecture/: sage-brain-architecture.md  sage-brain-architecture.mmd
docs/superpowers/plans/: 2026-05-01-sage-init.md  2026-05-03-sage-meeting.md
docs/superpowers/specs/: 2026-05-01-sage-init-design.md  2026-05-03-meeting-notes-design.md
mcp_package/: README.md  pyproject.toml  server.json
mcp_package/sage_mcp/: __init__.py  __main__.py  server.py
scripts/: daily-maintenance.sh  install-launchagent.sh  install-skills.sh  sage-operations.py
skills/: sage-capture.md  sage-ingest.md  sage-init.md  sage-lint.md  sage-meeting.md  sage-memory.md  sage-relocate.md  sage-research.md
tests/: test_meeting_lint.py  test_sage_memory_exclusion.py
